--- a/mongo-deployment.yaml
+++ b/mongo-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo
-  namespace: namespace-ns
+  namespace: siva-ns
 spec:
   replicas: 1
   selector:
