--- a/mongo-service.yaml
+++ b/mongo-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
-  namespace: namespace-ns
+  namespace: siva-ns
 spec:
   selector:
     app: mongo
