--- a/vegetable-service.yaml
+++ b/vegetable-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vegetable-service
-  namespace: namespace-ns
+  namespace: siva-ns
 spec:
   selector:
     app: vegetable
