Update clusterIP to use value from configuration

--- a/templates/mongo-service.yaml
+++ b/templates/mongo-service.yaml
@@ -10,4 +10,4 @@ spec:
     - protocol: TCP
       port: {{ .Values.mongo.service.port }}
       targetPort: {{ .Values.mongo.service.targetPort }}
-  clusterIP: None
+  clusterIP: {{ .Values.mongo.service.clusterIP }}
